--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,5 +1,12 @@
 - content_for(:header_title){ _("Dashboard") }
 
+= DesignBox.boxt _("Actions"), 350
+= link_to _("Check all services"), dashboard_check_all_path, :class => "button", :method => :post, :data => {:confirm => _("Are you sure?")}
+= DesignBox.boxb
+
+%br/
+%br/
+
 - if failed_services.any?
   = DesignBox.boxt(_("Failed services!"), 350)
   %table.list
