--- a/app/views/reporters/edit.html.haml
+++ b/app/views/reporters/edit.html.haml
@@ -1,3 +1,3 @@
 - content_for(:header_title){ _("Edit reporter: %{name}", :name => @reporter.name) }
 
-= render "form"
+= render "form", reporter: @reporter
