--- a/app/views/services/_form.html.haml
+++ b/app/views/services/_form.html.haml
@@ -1,19 +1,19 @@
 = DesignBox.boxt _("Details"), 500
-= simple_form_for [@group, @service] do |f|
-  = f.input :name
-  = f.input :group_id, :collection => Group.order(:name)
-  = f.input :plugin_id, :collection => Plugin.order(:name)
+= simple_form_for [service.group, service] do |f|
+  = f.input :name, autofocus: true
+  = f.input :group_id, collection: Group.order(:name), label: Service.human_attribute_name(:group)
+  = f.input :plugin_id, collection: Plugin.order(:name), label: Service.human_attribute_name(:plugin)
   = f.input :active
-  
-  - unless @service.new_record?
+
+  - unless service.new_record?
     %h2= _("Plugin parameters")
     = simple_fields_for :parameters do |f|
-      - @service.parameters.each do |parameter|
-        = f.input parameter["name"], :label => parameter["title"], :required => false, :input_html => {:value => parameter["value"]}
-  
+      - service.parameters.each do |parameter|
+        = f.input parameter["name"], label: parameter["title"], required: false, input_html: {value: parameter["value"]}
+
   = f.submit _("Save")
-  
-  - unless @service.new_record?
-    = link_to _("Show"), [@group, @service], :class => "button"
-    = link_to _("Delete"), [@group, @service], :class => "button", :method => :delete, :data => {:confirm => _("Are you sure?")}
+
+  - unless service.new_record?
+    = link_to _("Show"), [service.group, service], class: "button"
+    = link_to _("Delete"), [service.group, service], class: "button", method: :delete, data: {confirm: _("Are you sure?")}
 = DesignBox.boxb
