--- a/app/views/services/edit.html.haml
+++ b/app/views/services/edit.html.haml
@@ -1,3 +1,3 @@
 - content_for(:header_title){ _("Edit service: %{name}", :name => @service.name) }
 
-= render "form"
+= render "form", service: @service
