--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -27,4 +27,4 @@
 %br/
 %br/
 
-= render "/public_activities/table", :resource => @service
+= render "/public_activities/table", :activities => @activities
