--- a/app/views/reporters/show.html.haml
+++ b/app/views/reporters/show.html.haml
@@ -1,6 +1,6 @@
-- content_for(:header_title){ _("Show reporter: %{name}", :name => @reporter.name) }
+- content_for(:header_title){ _("Show reporter: %{name}", name: @reporter.name) }
 
 .bottom_margin
-  = link_to _("Edit reporter"), edit_reporter_path(@reporter), :class => "button" if can? :edit, @reporter
+  = link_to _("Edit reporter"), edit_reporter_path(@reporter), class: "button" if can? :edit, @reporter
 
-= render "/public_activities/table", :resource => @reporter
+= render "/public_activities/table", activities: @activities
